--- a/Filiations/App.Config
+++ b/Filiations/App.Config
@@ -5,11 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	<add name="FilliationsEntity" connectionString="metadata=res://*/FilliationsModel.csdl|res://*/FilliationsModel.ssdl|res://*/FilliationsModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FiliationsEntities" connectionString="metadata=res://*/Filiations.csdl|res://*/Filiations.ssdl|res://*/Filiations.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sqlserver.S2AM.sdslab.cat;initial catalog=SecureCoreG2;persist security info=True;user id=G2;password=12345aA@G22526.;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-  </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
